--- a/Landing-Page/CSS/landingPage.css
+++ b/Landing-Page/CSS/landingPage.css
@@ -11,8 +11,10 @@ header h1{
 text-align: center;
 }
 nav{
+    padding: 8px;
     width:100%;
-    background-color:blue;
+    background-image: url(/IMG/theme/closeup-dark-blue-fabric-texture-260nw-301400039.webp);
+    position:fixed;
 
 }
 nav ul{
