--- a/Recipes/Home/CSS/styleRecipeHome.css
+++ b/Recipes/Home/CSS/styleRecipeHome.css
@@ -25,22 +25,23 @@ nav a:hover{
 header{
     margin:0px;
     padding: 0px;
-    text-align:center;
     width:100%;
+    text-align:center;
+    font-family: 'Red Hat Display', sans-serif;
     border:1px solid black;
-    position:relative;
-    top:50px;
-    
 }
 main{
     height:1000px;
 }
 
 #sideNav{
-    padding: 20px 10px 0px 0px;
+    padding: 5px 10px 0px 0px;
     width: 20%;
     height: 100%;
     background-color: rgb(246, 246, 246);
+}
+#sideNav table{
+    padding: 10px 0px;
 }
 #sideNav ul{
     list-style-type: none;
@@ -48,6 +49,6 @@ main{
 }
 #sideNav li{
     padding:5px;
-    border-top:1px solid rgb(126, 126, 213);
+    border-bottom:1px solid rgb(126, 126, 213);
 }
 #mainContent{}
